# Code-Bar

./: .gitignore  Cargo.toml  LICENSE  README.ar.md  README.md  README.zh.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
apps/desktop/: package.json  tsconfig.json  vite.config.ts
coding-island/: README.md  README.zh.md  package.json  pnpm-lock.yaml
coding-island/src/: App.tsx  index.css
coding-island/src-tauri/: Cargo.toml  tauri.conf.json
crates/codebar/: Cargo.toml
crates/codebar-contracts/: Cargo.toml
crates/codebar-mcp/: Cargo.toml
crates/codebard/: Cargo.toml
crates/codebard/src/: approval_executor.rs  contract_enum_map.rs  contract_map.rs  event_bus.rs  lib.rs  main.rs  provider_adapter.rs  rpc.rs  runtime.rs  single_instance.rs  storage.rs  wiring.rs  worktree_host.rs
crates/codebard/tests/: integration.rs
crates/daemon-core/: Cargo.toml
crates/mcp-bridge/: Cargo.toml
crates/provider-claude/: Cargo.toml
crates/provider-codex/: Cargo.toml
crates/runtime-host/: Cargo.toml
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/migrations/: 0001_initial.sql
crates/storage-sqlite/src/: lib.rs
crates/task-orchestrator/: Cargo.toml
scripts/: tauri-dev-worktree.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli_detect.rs  dialog.rs  harness.rs  hooks.rs  keystore.rs  lib.rs  main.rs  notification.rs  provider_sessions.rs  pty.rs  runner.rs  session_files.rs  session_lifecycle.rs  state.rs  ui_state.rs  usage.rs  util.rs  window.rs
src/components/: DiffViewer.tsx  DraggableCard.tsx  ExploreMode.tsx  PtyTerminal.tsx  SessionDetail.tsx  SessionList.tsx  Settings.tsx  SplitSwapLayout.tsx  SplitWidgetPanel.tsx  StatusBar.tsx  TitleBar.tsx  TrafficLights.tsx  UsageWidgetCard.tsx  WorkspaceStack.tsx
src/harness/: llmClient.ts  nativeHarness.ts  tools.ts
src/hooks/: useSessionRunnerController.ts
src/i18n/: config.ts  format.ts  messages.ts  react.ts
src/lib/: sessionLaunch.ts
src/services/: editorCommands.ts  ptyCommands.ts  ptyIdentity.ts  scmCommands.ts  (+1 more)
(+225 files in other folders)
