[package]
name = "codebard"
version = "0.1.0"
edition = "2021"

[dependencies]
daemon-core = { path = "../daemon-core" }
codebar-contracts = { path = "../codebar-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "fs"] }
