[package]
name = "storage-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
daemon-core = { path = "../daemon-core" }
codebar-contracts = { path = "../codebar-contracts" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
